--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,8 @@ XlsxWriter==3.0.3
 xlwt==1.3.0
 qrcode==7.3.1
 plotly==5.6.0
+matplotlib==3.2.2
+python_dateutil==2.8.2
+requests==2.22.0
+scipy==1.5.0
+seaborn==0.10.1
